AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = hwtwo
hwtwo = \
         src/mcal/mcal.cpp
         src/mcal/mcal_gcc_cxx_completion.cpp
         src/mcal/avr/mcal_cpu.cpp
         src/mcal/avr/mcal_gpt.cpp
         src/mcal/avr/mcal_irq.cpp
         src/mcal/avr/mcal_led.cpp
         src/sys/start/sys_start.cpp
         target/micros/avr/startup/crt0.cpp
         target/micros/avr/startup/crt0_init_ram.cpp
         target/micros/avr/startup/crt1.cpp
         target/micros/avr/startup/int_vect.cpp
         